# prototype1

bot_bringup/: CMakeLists.txt  package.xml
bot_bringup/launch/: sim_bot.launch.py
bot_controller/: CMakeLists.txt  package.xml
bot_controller/config/: bot_controllers.yaml
bot_controller/launch/: controller.launch.py
bot_desc/: CMakeLists.txt  package.xml
bot_desc/launch/: bot.launch.py  rviz_bot.launch.py
bot_desc/meshes/: base_cone.part  base_cone.stl  elbow_arm.part  elbow_arm.stl  elbow_motor.part  elbow_motor.stl  handle.part  handle.stl  new_base_cone.stl  shoulder_Motor_2.stl  shoulder_arm.part  shoulder_arm.stl  shoulder_attachment.part  shoulder_attachment.stl  shoulder_motor.part  shoulder_motor.stl  spatula.part  spatula.stl  utensil_attachment.part  utensil_attachment.stl  wrist_attachment_1.part  wrist_attachment_1.stl  wrist_motor_1.part  wrist_motor_1.stl  wrist_motor_2.part  wrist_motor_2.stl
bot_desc/rviz/: rviz_bot.rviz
bot_desc/urdf/: bot.urdf.xacro  bot_gazebo.xacro  bot_orig.urdf.xacro  bot_ros2_control.xacro
bot_misa/: .setup_assistant  CMakeLists.txt  package.xml
bot_misa/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  proto_bot.ros2_control.xacro  proto_bot.srdf  proto_bot.urdf.xacro  ros2_controllers.yaml
bot_misa/launch/: demo.launch.py  misa.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
bot_msgs/: CMakeLists.txt  package.xml
bot_taskserver/: CMakeLists.txt  package.xml
bot_taskserver/launch/: mainserver.launch.py
bot_taskserver/src/: main_taskserver.cpp  main_taskserver_orig.cpp  simple_taskserver.cpp
bot_ui/: package.xml  setup.cfg  setup.py
bot_ui/bot_ui/: app.py
bot_ui/bot_ui/templates/: index.html
